--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "homepage": "https://github.com/scutxieyun/nrenderjs#readme",
   "dependencies": {
+    "EventEmitter": "^1.0.0",
     "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "react-dom": "^15.0.2",
+    "react-hammerjs": "^0.4.6",
+    "wolfy87-eventemitter": "^5.0.0"
   },
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.8.0",
